# Charliz-RAG

./: .gitignore  index.html  package.json  plan.md  pnpm-lock.yaml  tsconfig.app.json
.claude/: settings.local.json
python-backend/: pyproject.toml  requirements.txt
python-backend/src/: main.py
python-backend/src/api/: collections.py  documents.py  health.py
python-backend/src/core/: chunker.py
python-backend/src/parsers/: document_parser.py
python-backend/src/storage/: memory_store.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: settings.rs  sidecar.rs
src/components/: HealthPanel.tsx  Sidebar.tsx
src/lib/api/: backend.ts
src/pages/: ChatPage.tsx  DocumentsPage.tsx  SettingsPage.tsx
src/stores/: appStore.ts
src/types/: domain.ts
