[project]
name = "charliz-rag-backend"
version = "0.1.0"
description = "Charliz RAG FastAPI sidecar"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "python-multipart>=0.0.20",
  "unstructured[csv,docx,md,pdf,xlsx]>=0.18.15",
  "unstructured-inference>=1.2.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
